# lpil-gerby-tag-server

./: .gitignore  example-lgt-config.yaml  example-website-config.toml  pyproject.toml
docs/: Readme.md
lgtWebserver/: app.py  cli.py  configuration.py  database.py  webserver.py
lgtWebserver/templates/: baseApp.html  index.html
scripts/: installEditableLGTScripts  installEditableLGTWebserverCommand  lgtExporter  lgtImporter  lgtScanner
